--- a/freewifiClient/assets/index.html
+++ b/freewifiClient/assets/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8" />
-<title>Hello</title>
-<script>
-function test(param){
-	param = 2;
-	return param;
-}
-</script>
-</head>
-<body>
-	This is a test page.
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<title></title>
+	</head>
+	<body>
+		
+	</body>
 </html>
