--- a/freewifiClient/assets/register-info.html
+++ b/freewifiClient/assets/register-info.html
@@ -18,23 +18,27 @@
   <body>
     <div class="container">
 
-      <form class="form-reginfo">
+      <form class="form-reginfo" id="form_registerinfo" action="submitting.html" method="post" onsubmit="sendRegisterInfo();">
         <h2 class="form-reginfo-heading">用户信息填写</h2>
         <br />
         <!--昵称-->
-        <div class="input-group">
+
+        <!--<div class="input-group">
         	<span class="input-group-addon">昵称</span>
 	        <label for="inputName" class="sr-only">昵称</label>
 	        <input type="text" id="inputName" class="form-control" placeholder="NIck Name" required autofocus>
     	</div>
-        <br />
+
+        <br />-->
         <!--性别-->
 		<div class="input-group">
 			<span class="input-group-addon">性别</span>
       		<label class="form-control">
-      			<input type="radio" name="gender" value="male" aria-label="sex-male"  checked="checked"> 男
+
+      			<input type="radio" id="radio_male" name="gender" value="male" aria-label="sex-male"  checked="checked"> 男
       			&nbsp;&nbsp;&nbsp;
-      			<input type="radio" name="gender" value="female" aria-label="sex-female"> 女
+
+      			<input type="radio" id="radio_female" name="gender" value="female" aria-label="sex-female"> 女
       		</label>
 		</div>
 		<br />
