--- a/html/login.html
+++ b/html/login.html
@@ -79,7 +79,7 @@
 
 <section class="pod">
 	<div class="container">
-		<form accept-charset="UTF-8" action="/login/retrieve/site" class="clearfix single_field" id="find_site" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="KRO9NHjpS0tyzdjA8wmDKVKRKmoplChMXuOADf9qfF8=" /></div>
+		<form accept-charset="UTF-8" action="merchant/login" class="clearfix single_field" id="find_site" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="KRO9NHjpS0tyzdjA8wmDKVKRKmoplChMXuOADf9qfF8=" /></div>
 
 			<div class="row controls">
 				<div class="input-append">
@@ -87,7 +87,7 @@
 					<input class="site_subdomain"
 					id="site_subdomain"
 					maxlength="50"
-					name="site[subdomain]"
+					name="username"
 					placeholder="User Name" size="50" type="text" />
 					</div>
 
@@ -95,7 +95,7 @@
                                 <div class="input-append">
 				  <div>
                                     <input class="site_subdomain" id="site_subdomain" maxlength="50"
-                                           name="site[subdomain]" placeholder="Password" size="50"
+                                           name="password" placeholder="Password" size="50"
                                            type="Password" />
                                   </div>
                                 </div>
