--- a/html/register.html
+++ b/html/register.html
@@ -191,32 +191,29 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="user_site_attributes_contact_phone" class="placeholder">
-                                        Mac Address
+                                        Tel
                                     </label>
-                                    <input type="text" class="form-control input-lg" id="user_site_attributes_contact_phone"
+                                    <input type="text" class="form-control input-lg" id="tel"
                                     name="user[site_attributes][contact_phone]"
                                     maxlength="30" value=""
-                                    placeholder="Mac Address"
+                                    placeholder="Tel"
                                     data-placement="top" data-title="Enter your phone number." data-error-title="">
                                 </div>
                                 <div class="form-group">
-                                    <label for="company_name" class="placeholder">
-                                        Wifi Verification
+                                    <label for="user_site_attributes_contact_phone" class="placeholder">
+                                      ssid
                                     </label>
-                                    <select class="form-control">
-                                      <option value="one">Wifi
-                                      Verification</option>
-                                      <option value="five">One</option>
-                                      <option value="two">Two</option>
-                                      <option value="three">Three</option>
-                                      <option value="four">Four</option>
-                                    </select>
+                                    <input type="text" class="form-control input-lg" id="ssid"
+                                    name="ssid"
+                                    maxlength="30" value=""
+                                    placeholder="ssid"
+                                    data-placement="top" data-title="Enter your phone number." data-error-title="">
                                 </div>
                                 <div class="form-group">
                                     <label for="user_site_attributes_contact_phone" class="placeholder">
                                         Wifi Password
                                     </label>
-                                    <input type="text" class="form-control input-lg" id="user_site_attributes_contact_phone"
+                                    <input type="password" class="form-control input-lg" id="wifiPassword"
                                     name="user[site_attributes][contact_phone]"
                                     maxlength="30" value=""
                                     placeholder="Wifi Password"
@@ -224,14 +221,27 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="user_site_attributes_contact_phone" class="placeholder">
+                                      Name
+                                    </label>
+                                    <input id="name" type="text" class="form-control input-lg" id="user_site_attributes_contact_phone"
+                                    name="user[site_attributes][contact_phone]"
+                                    maxlength="30" value=""
+                                    placeholder="Name"
+                                    data-placement="top" data-title="Enter your phone number." data-error-title="">
+                                </div>
+                                <div >
+                                    <label for="user_site_attributes_contact_phone" class="placeholder">
                                       Location
                                     </label>
                                     <input id="location" type="text" class="form-control input-lg" id="user_site_attributes_contact_phone"
                                     name="user[site_attributes][contact_phone]"
                                     maxlength="30" value=""
                                     placeholder="Location"
-                                    data-placement="top" data-title="Enter your phone number." data-error-title="">
+                                    data-placement="top"
+                                    data-title="Enter your phone
+                                    number." data-error-title="">
                                 </div>
+<div id="error-url" style="display: none;">Please input more specific location</div>
                                 <div class="submit-group" id='start'>
                                     <a href="#step2" class="btn btn-primary btn-lg next" id="form_register_step1">
                                         Start your cheap Ad.
@@ -270,23 +280,8 @@
         <script src="./js/bootstrap.min.js"
         type="text/javascript">
         </script>
-        <script type="text/javascript">
-            $('#start').click(function() {
-                var address = $('#location').val();
-                var url = 'http://api.map.baidu.com/geocoder/v2/?address=' + address
-                          + '&output=json&ak=fr2k1GxnZbBxXalKYdcQUNBM';
-                $.ajax({
-                    url: url,
-                    dataType: 'jsonp',
-                    success: function(data) {
-                        address = data.result.location;
-                        console.log(address.lng + "  " + address.lat);
-                    }
-                });
+        <script src="js/login.js"></script>
 
-
-            });
-        </script>
     </body>
 
 </html>
