[Function & Prototype] Ad save

--- a/html/editor.html
+++ b/html/editor.html
@@ -16,7 +16,11 @@
 		<script src="js/jquery.hotkeys.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/prettify.js"></script>
-		<link href="./css/index.css" rel="stylesheet">
+    <script src="./js/bootstrap-datetimepicker.min.js"></script>
+    <script src="./js/editor.js"></script>
+    <link href="./css/index.css" rel="stylesheet">
+    <link href="./css/editor.css" rel="stylesheet">
+    <link href="./css/bootstrap-datetimepicker.min.css" rel="stylesheet">
     <script src="js/bootstrap-wysiwyg.js"></script>
 
   </head>
@@ -82,17 +86,21 @@
 
     <div id="editor">
     </div>
-
-    <div class="text-center">
-      <button id='preview' type="button" class="btn btn-primary center-block" data-toggle="modal" data-target="#myModal">Preview</button>
-
+    <div>
+      <p class="text-center btn-toolbar">
+        <span class="btn-group">
+          <button id='preview' type="button" class="btn-primary btn-block" data-toggle="modal" data-target="#previewModal">Preview</button>
+        </span>
+        <span class="btn-group">
+          <button id='save' type="button" class="btn-primary btn-block" data-toggle="modal" data-target="#saveModal">Save</button>
+        </span>
+      </p>
     </div>
-
 <!-- Trigger the modal with a button -->
 
 
 <!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
+<div id="previewModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
@@ -106,6 +114,44 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<div id="saveModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Ad Save</h4>
+      </div>
+      <div class="modal-body" id='modal-body'>
+        <div class="well">
+          <div class="form-group">
+            <input id="adName" type="text" class="form-control input-lg required" id="user-name" name="user[name]" maxlength="50" value="" placeholder="Ad Name" data-placement="top" data-title="Enter your first and last name." data-error-title="You must enter your full name.">
+          </div>
+          <div class="input-append date" id="datetimepicker1">
+            <input id="startDateTime" placeholder="Start Date & Time" data-format="dd/MM/yyyy hh:mm:ss" type="text">
+            <span class="add-on">
+              <i data-date-icon="icon-calendar" data-time-icon="icon-time" class="icon-calendar">
+              </i>
+            </span>
+          </div>
+          <div class="input-append date" id="datetimepicker2">
+            <input id="endDateTime" placeholder="End Date & Time" data-format="dd/MM/yyyy hh:mm:ss" type="text">
+            <span class="add-on">
+              <i data-date-icon="icon-calendar" data-time-icon="icon-time" class="icon-calendar">
+              </i>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button id="adSave" type="button" class="btn btn-default" data-dismiss="modal">save</button>
       </div>
     </div>
 
@@ -152,13 +198,7 @@
     initToolbarBootstrapBindings();
 	$('#editor').wysiwyg({ fileUploadError: showErrorAlert} );
     window.prettyPrint && prettyPrint();
-
-  // Author: Kaiyang Lv
-  // Time: 2015年5月24日21时14分52秒
-  $('#preview').click(function() {
-    $('#modal-body').html( $('#editor').cleanHtml());
-  })
   });
 </script>
-<div id="fb-root"></div>
+  </body>
 </html>
