--- a/freewifiClient/assets/register-info.html
+++ b/freewifiClient/assets/register-info.html
@@ -18,7 +18,8 @@
   <body>
     <div class="container">
 
-      <form class="form-reginfo" id="form_registerinfo" action="submitting.html" method="post" onsubmit="sendRegisterInfo();">
+      <form class="form-reginfo" id="form_registerinfo" action="submitting.html" method="post" 
+      		onsubmit="return sendRegisterInfo();">
         <h2 class="form-reginfo-heading">用户信息填写</h2>
         <br />
         <!--昵称-->
@@ -42,15 +43,23 @@
         <div class="input-group">
         	<span class="input-group-addon">生日</span>
 	        <label for="inputBirthday" class="sr-only">生日</label>
-	        <input type="text" id="inputBirthday" class="form-control" placeholder="1990-01-01" required>
+	        <input type="text" id="inputBirthday" class="form-control" placeholder="格式：1990-01-01" 
+	        	required onfocus="focusBirthday()" onblur="blurBirthday()">
     	</div>
+    	<h4 id="warningBirthday" style="display:none;">
+    		<span id="msgBirthday" class="label label-warning">请按格式输入，例如 1990-01-01 <br /></span>
+    	</h4>
         <br />
         <!--手机-->
         <div class="input-group">
         	<span class="input-group-addon">手机</span>
 	        <label for="inputCellphone" class="sr-only">手机</label>
-	        <input type="text" id="inputCellphone" class="form-control" placeholder="Cell Number" required>
+	        <input type="text" id="inputCellphone" class="form-control" placeholder="格式：11位数字" 
+	        	required onfocus="focusTel()" onblur="blurTel()">
         </div>
+        <h4 id="warningTel" style="display:none;">
+        	<span id="msgTel" class="label label-warning">请按格式输入11位手机号 <br /></span>
+        </h4>
         <br />
         <!--教育水平-->
         <div class="input-group">
