[Prototype] Update time select display

--- a/html/editor.html
+++ b/html/editor.html
@@ -153,14 +153,14 @@
           <div class="input-append date" id="datetimepicker3">
             <input id="startTime" placeholder="Start Time" data-format="hh:mm:ss" type="text">
             <span class="add-on">
-              <i data-date-icon="icon-calendar" data-time-icon="icon-time" class="icon-calendar">
+              <i data-date-icon="icon-calendar" data-time-icon="icon-time" class="icon-time">
               </i>
             </span>
           </div>
           <div class="input-append date" id="datetimepicker4">
             <input id="endTime" placeholder="Start Date" data-format="hh:mm:ss" type="text">
             <span class="add-on">
-              <i data-date-icon="icon-calendar" data-time-icon="icon-time" class="icon-calendar">
+              <i data-date-icon="icon-calendar" data-time-icon="icon-time" class="icon-time">
               </i>
             </span>
           </div>
