--- a/html/register.html
+++ b/html/register.html
@@ -280,7 +280,7 @@
         <script src="./js/bootstrap.min.js"
         type="text/javascript">
         </script>
-        <script src="js/login.js"></script>
+        <script src="js/register.js"></script>
 
     </body>
 
