--- a/html/manage.html
+++ b/html/manage.html
@@ -7,7 +7,9 @@
 		<link rel="stylesheet" href="css/bootstrap2.min.css" />
 		<link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
 		<link rel="stylesheet" href="css/unicorn.main.css" />
-		<link rel="stylesheet" href="css/unicorn.grey.css" class="skin-color" />
+		<link rel="stylesheet" href="css/unicorn.grey.css"
+		class="skin-color" />
+<link href="./css/font-awesome.css" rel="stylesheet">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 	<body>
 
@@ -27,33 +29,12 @@
 		<div id="sidebar">
 			<a href="#" class="visible-phone"><i class="icon icon-home"></i> 首页</a>
 			<ul>
-				<li ><a href="index.html"><i class="icon icon-home"></i> <span>首页</span></a></li>
-				<!-- <li class="submenu"> -->
-				<!-- 	<a href="#"><i class="icon icon-th-list"></i> <span>表单组件</span> <span class="label">3</span></a> -->
-				<!-- 	<ul> -->
-				<!-- 		<li><a href="form-common.html">通用组件</a></li> -->
-				<!-- 		<li><a href="form-validation.html">表单验证</a></li> -->
-				<!-- 		<li><a href="form-wizard.html">表单提示</a></li> -->
-				<!-- 	</ul> -->
-				<!-- </li> -->
-				<!-- <li><a href="buttons.html"><i class="icon icon-tint"></i> <span>按钮 &amp; 图标</span></a></li> -->
-				<!-- <li><a href="interface.html"><i class="icon icon-pencil"></i> <span>UI元素</span></a></li> -->
-				<!-- <li><a href="tables.html"><i class="icon icon-th"></i> <span>表格</span></a></li> -->
-				<!-- <li><a href="grid.html"><i class="icon icon-th-list"></i> <span>网格布局</span></a></li> -->
-				<!-- <li class="submenu"> -->
-				<!-- 	<a href="#"><i class="icon icon-file"></i> <span>其他页面</span> <span class="label">4</span></a> -->
-				<!-- 	<ul> -->
-				<!-- 		<li><a href="invoice.html">清单</a></li> -->
-				<!-- 		<li><a href="chat.html">聊天</a></li> -->
-				<!-- 		<li><a href="calendar.html">日历</a></li> -->
-				<!-- 		<li><a href="gallery.html">相册</a></li> -->
-				<!-- 	</ul> -->
-				<!-- </li> -->
-				<!-- <li> -->
-				<!-- 	<a href="charts.html"><i class="icon icon-signal"></i> <span>图表统计</span></a> -->
-				<!-- </li> -->
+				<li ><a href="index.html"><i class="icon
+				icon-home"></i> <span>Home Page</span></a></li>
+				<li ><a href="index.html"><i class="icon
+				icon-edit"></i> <span>Edit</span></a></li>
 				<li class="active">
-					<a href="widgets.html"><i class="icon icon-inbox"></i> <span>Manage</span></a>
+					<a href="widgets.html"><i class="icon icon-dashboard"></i> <span>Manage</span></a>
 				</li>
 			</ul>
 
