[Prototype] 1. Restore editor.html 2. Update link between htmls

--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
 
 					<ul class="nav navbar-nav navbar-right">
 						<li>
-							<a href="https://login.desk.com/">
+							<a href="login.html">
 								Login
 							</a>
 						</li>
@@ -40,7 +40,7 @@
 				<p class="lead">Cheap Ads to attract
 				customers by FreeWifi.</p>
 				<p>
-					<a href="http://help.desk.com/register" class="btn btn-lg btn-success btn-round btn-no-border btn-uppercase">
+					<a href="register.html" class="btn btn-lg btn-success btn-round btn-no-border btn-uppercase">
 						Try freewifi.com for free
 					</a>
 				</p>
