--- a/html/manage.html
+++ b/html/manage.html
@@ -31,7 +31,7 @@
 			<ul>
 				<li ><a href="index.html"><i class="icon
 				icon-home"></i> <span>Home Page</span></a></li>
-				<li ><a href="index.html"><i class="icon
+				<li ><a href="editor.html"><i class="icon
 				icon-edit"></i> <span>Edit</span></a></li>
 				<li class="active">
 					<a href="widgets.html"><i class="icon icon-dashboard"></i> <span>Manage</span></a>
