--- a/html/register.html
+++ b/html/register.html
@@ -77,7 +77,7 @@
         <div id="stage" class="">
             <header pardot-region="header-image">
                 <div class="col-md-6 col-md-offset-5">
-                    <a href="http://www.desk.com/" title="Learn More About Customer Service from Desk.com"
+                    <a href="index.html" title="Learn More About freewifi.com"
                     id="logo">
                         <img src="http://storage.pardot.com/26172/46474/Desk_logo_85H_sfdc_Desk_Current_logo_KO_rgb_1.0.png"
                         alt="Customer Service from Desk.com">
