[Function] Get Ads list.

--- a/html/manage.html
+++ b/html/manage.html
@@ -9,8 +9,12 @@
 		<link rel="stylesheet" href="css/unicorn.main.css" />
 		<link rel="stylesheet" href="css/unicorn.grey.css"
 		class="skin-color" />
-<link href="./css/font-awesome.css" rel="stylesheet">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
+                <link href="./css/font-awesome.css" rel="stylesheet">
+	<meta http-equiv="Content-Type" content="text/html;
+	charset=utf-8" />
+        <script src="./js/jquery.min.js"></script>
+        <script src="./js/manage.js"></script>
+</head>
 	<body>
 
 
@@ -60,44 +64,26 @@
 								<h5>Recent Ads</h5>
 							</div>
 							<div class="widget-content nopadding">
-								<ul class="recent-posts">
+								<ul class="recent-posts"
+                                                                    id="recent-posts">
 									<li>
-										<div class="user-thumb">
-											<img width="40" height="40" alt="User" src="img/av2.jpg" />
-										</div>
 										<div class="article-post">
 											<span class="user-info"> By: neytiri on 2 Aug 2012, 09:27 AM, IP: 186.56.45.7 </span>
 											<p>
 												<a href="#">Vivamus sed auctor nibh congue, ligula vitae tempus pharetra...</a>
 											</p>
-											<a href="#" class="btn btn-primary btn-mini">Edit</a> <a href="#" class="btn btn-success btn-mini">Publish</a> <a href="#" class="btn btn-danger btn-mini">Delete</a>
+											<a href="#"
+											class="btn
+											btn-primary
+											btn-mini">Edit</a> <a href="#"
+											class="btn
+											btn-success
+											btn-mini">Publish</a>
+<a href="#" class="btn btn-success btn-mini">Unpublish</a>
+<a href="#" class="btn btn-success btn-mini">Preview</a>
+<a href="#" class="btn btn-danger btn-mini">Delete</a>
 										</div>
 									</li>
-									<li>
-										<div class="user-thumb">
-											<img width="40" height="40" alt="User" src="img/av3.jpg" />
-										</div>
-										<div class="article-post">
-											<span class="user-info"> By: john on on 24 Jun 2012, 04:12 PM, IP: 192.168.24.3 </span>
-											<p>
-												<a href="#">Vivamus sed auctor nibh congue, ligula vitae tempus pharetra...</a>
-											</p>
-											<a href="#" class="btn btn-primary btn-mini">Edit</a> <a href="#" class="btn btn-success btn-mini">Publish</a> <a href="#" class="btn btn-danger btn-mini">Delete</a>
-										</div>
-									</li>
-									<li>
-										<div class="user-thumb">
-											<img width="40" height="40" alt="User" src="img/av1.jpg" />
-										</div>
-										<div class="article-post">
-											<span class="user-info"> By: michelle on 22 Jun 2012, 02:44 PM, IP: 172.10.56.3 </span>
-											<p>
-												<a href="#">Vivamus sed auctor nibh congue, ligula vitae tempus pharetra...</a>
-											</p>
-											<a href="#" class="btn btn-primary btn-mini">Edit</a> <a href="#" class="btn btn-success btn-mini">Publish</a> <a href="#" class="btn btn-danger btn-mini">Delete</a>
-										</div>
-									</li>
-
 								</ul>
 							</div>
 						</div>
@@ -105,12 +91,5 @@
 				</div>
 			</div>
 		</div>
-
-
-
-            <script src="js/jquery.min.js"></script>
-            <script src="js/jquery.ui.custom.js"></script>
-            <script src="js/bootstrap.min.js"></script>
-            <script src="js/unicorn.js"></script>
 	</body>
 </html>
