[Function] manage.html support edit

--- a/html/editor.html
+++ b/html/editor.html
@@ -27,8 +27,10 @@
     <script src="./js/prettify.js"></script>
     <script src="./js/bootstrap-datetimepicker.min.js"></script>
     <script src="./js/bootstrap-multiselect.js"></script>
+    <script src="js/utility.js"></script>
     <script src="./js/editor.js"></script>
     <script src="js/bootstrap-wysiwyg.js"></script>
+
 
 </head>
 	<body>
