--- a/html/ad.html
+++ b/html/ad.html
@@ -25,23 +25,11 @@
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/prettify.js"></script>
     <script src="js/bootstrap-wysiwyg.js"></script>
+    <script src="js/utility.js"></script>
   </head>
   <body>
   </body>
 <script>
-  function getUrlParameter(sParam)
-  {
-    var sPageURL = window.location.search.substring(1);
-    var sURLVariables = sPageURL.split('&');
-    for (var i = 0; i < sURLVariables.length; i++)
-    {
-        var sParameterName = sURLVariables[i].split('=');
-        if (sParameterName[0] == sParam)
-        {
-            return sParameterName[1];
-        }
-    }
-  }
   $(function(){
       var id = getUrlParameter('id');
       $.ajax({
