[Prototype] Register with image

--- a/html/register.html
+++ b/html/register.html
@@ -18,6 +18,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href="./css/bootstrap.min.css">
         <link rel="stylesheet" href="./css/font-awesome.css">
+        <link rel="stylesheet" href="./css/register.css">
         <!-- modernizer -->
         <script type="text/javascript" src="./js/modernizr.custom.32032.js">
         </script>
@@ -79,7 +80,7 @@
                 <div class="col-md-6 col-md-offset-5">
                     <a href="index.html" title="Learn More About freewifi.com"
                     id="logo">
-                        <img src="http://storage.pardot.com/26172/46474/Desk_logo_85H_sfdc_Desk_Current_logo_KO_rgb_1.0.png"
+                        <img src="img/Desk_logo_85H_sfdc_Desk_Current_logo_KO_rgb_1.0.png"
                         alt="Customer Service from Desk.com">
                     </a>
                 </div>
@@ -229,6 +230,15 @@
                                     placeholder="Name"
                                     data-placement="top" data-title="Enter your phone number." data-error-title="">
                                 </div>
+                                <div class="form-group input-group">
+                                  <span class="input-group-btn">
+                                    <span class="btn btn-primary btn-file">
+                                      Browse… <input type="file" id="imgInp" placeholder="Image">
+                                    </span>
+                                  </span>
+                                  <img id="blah" src="#" alt="your image" />
+                                </div>
+
                                 <div >
                                     <label for="user_site_attributes_contact_phone" class="placeholder">
                                       Location
