--- a/html/editor.html
+++ b/html/editor.html
@@ -213,12 +213,14 @@
               <option value="0">Male</option>
               <option value="1">Female</option>
             </select>
+
             <select id="age" multiple="multiple">
               <option value="0" >< 8</option>
               <option value="1">20-35</option>
               <option value="2">35-50</option>
               <option value="3">> 50</option>
             </select>
+
             <select id="edu" multiple="multiple">
               <option value="0" > < High School</option>
               <option value="1">High School</option>
@@ -226,11 +228,32 @@
               <option value="3">Bachelor</option>
               <option value="4"> > master</option>
             </select>
+
             <select id="income" multiple="multiple">
               <option value="0" >< 3000</option>
               <option value="1">3000-7000</option>
               <option value="2">7000-10000</option>
               <option value="3">> 10000</option>
+            </select>
+            <br>
+
+            <select id="marry" multiple="multiple">
+              <option value="0" >Married</option>
+              <option value="1">Single</option>
+            </select>
+            <select id="child" multiple="multiple">
+              <option value="0" >None</option>
+              <option value="1">Pregnancy</option>
+              <option value="2">0-3</option>
+              <option value="3">3-6</option>
+            </select>
+            <select id="career" multiple="multiple">
+              <option value="0" >Student</option>
+              <option value="1">Industry</option>
+              <option value="2">Service</option>
+              <option value="3">IT</option>
+              <option value="4">Education</option>
+              <option value="5">SMES</option>
             </select>
 
           </div>
