--- a/html/register.html
+++ b/html/register.html
@@ -11,20 +11,23 @@
             Get Started with Desk.com | Desk.com
         </title>
 
-        <script src="./js/jquery.min.js"
-        type="text/javascript">
-        </script>
+
         <!-- Bootstrap core -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href="./css/bootstrap.min.css">
+        <script src="./js/jquery.min.js"
+        type="text/javascript"></script>
+        <script src="./js/bootstrap.min.js" type="text/javascript"></script>
         <link rel="stylesheet" href="./css/font-awesome.css">
         <link rel="stylesheet" href="./css/register.css">
         <!-- modernizer -->
         <script type="text/javascript" src="./js/modernizr.custom.32032.js">
         </script>
         <!-- typekit -->
-        <script type="text/javascript" src="./js/jgm1qhs.js">
-        </script>
+        <script type="text/javascript" src="./js/jgm1qhs.js"></script>
+        <script type="text/javascript" src="./js/bootstrap-multiselect.js"></script>
+        <link href="./css/bootstrap-multiselect.css" rel="stylesheet">
+        <script src="js/register.js"></script>
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media
         queries -->
         <!--[if lt IE 9]>
@@ -230,6 +233,20 @@
                                     placeholder="Name"
                                     data-placement="top" data-title="Enter your phone number." data-error-title="">
                                 </div>
+                                <div class="form-group">
+                                    <label for="user_site_attributes_contact_phone" class="placeholder">
+                                      Name
+                                    </label>
+                                    <select id="industry" multiple="multiple">
+                                      <option value="0">Household Electrical</option>
+                                      <option value="1">IT</option>
+                                      <option value="2">Daily Commodies</option>
+                                      <option value="3">Recreation</option>
+                                      <option value="4">Gift Accessories</option>
+                                      <option value="5">Restaurant</option>
+                                      <option value="6">Clothing and Shoes</option>
+                                    </select>
+                                </div>
                                 <div class="form-group input-group">
                                   <span class="input-group-btn">
                                     <span class="btn btn-primary btn-file">
@@ -287,10 +304,7 @@
         <!-- #regform -->
         <!-- #all -->
         <!-- JS -->
-        <script src="./js/bootstrap.min.js"
-        type="text/javascript">
-        </script>
-        <script src="js/register.js"></script>
+
 
     </body>
 
