--- a/freewifiClient/assets/login.html
+++ b/freewifiClient/assets/login.html
@@ -18,15 +18,16 @@
   <body>
     <div class="container">
 
-      <form class="form-signin">
+      <form class="form-signin" id="form_login" action="submitting.html" method="post" 
+      		onsubmit="return sendLoginInfo();">
         <h2 class="form-signin-heading">登录</h2>
-        <label for="inputAccount" class="sr-only">账号</label>
-        <input type="text" id="inputAccount" class="form-control" placeholder="账号" required autofocus>
+        <label for="inputAccount" class="sr-only">手机号</label>
+        <input type="text" id="inputAccount" class="form-control" placeholder="手机号" required>
         <!--<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>-->
         <label for="inputPassword" class="sr-only">密码</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="密码" required>
         <div class="checkbox">
-          <label><input type="checkbox" value="remember-me"> 记住账号</label>
+          <label><input type="checkbox" value="remember-me" checked="checked"> 记住手机号</label>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
       </form>
@@ -35,4 +36,9 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!--<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>-->
   </body>
+ <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="js/jquery-1.11.3.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="bs/js/bootstrap.min.js"></script>
+<script src="js/login.js"></script>
 </html>
