--- a/freewifiClient/assets/login.html
+++ b/freewifiClient/assets/login.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
 
-      <form class="form-signin" id="form_login" action="submitting.html" method="post" 
+      <form class="form-signin" id="form_login" action="" method="post" 
       		onsubmit="return sendLoginInfo();">
         <h2 class="form-signin-heading">登录</h2>
         <label for="inputAccount" class="sr-only">手机号</label>
@@ -30,6 +30,7 @@
           <label><input type="checkbox" value="remember-me" checked="checked"> 记住手机号</label>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
+        <button class="btn btn-lg btn-primary btn-block" onclick="register();" >注册</button>
       </form>
 
     </div> <!-- /container -->
