--- a/freewifiClient/assets/register-info.html
+++ b/freewifiClient/assets/register-info.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
 
-      <form class="form-reginfo" id="form_registerinfo" action="submitting.html" method="post" 
+      <form class="form-reginfo" id="form_registerinfo" action="" method="post" 
       		onsubmit="return sendRegisterInfo();">
         <h2 class="form-reginfo-heading">用户信息填写</h2>
         <br />
