[Function Manage] Pop up msg after operating successfully.

--- a/html/manage.html
+++ b/html/manage.html
@@ -13,6 +13,7 @@
 	<meta http-equiv="Content-Type" content="text/html;
 	charset=utf-8" />
         <script src="./js/jquery.min.js"></script>
+        <script src="./js/bootbox.min.js"></script>
         <script src="./js/manage.js"></script>
 </head>
 	<body>
